# Simple-FaaS-Platform

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  caw.cc  caw.h  caw.proto  caw_test.cc  cmd_client.cc  cmd_client.h  faz.proto  faz_client.cc  faz_client.h  faz_server.cc  faz_server.h  keyvaluestoreclass.cc  keyvaluestoreclass.h  kvstore_client.cc  kvstore_client.h  kvstore_server.cc  kvstore_server.h  kvstore_server_load_test.cc  kvstore_server_test.cc  kvstore_test.cc  prefix.h  run_cmd_client.cc  util.cc  util_test.cc
src/go-client/: client.go  faz_client.go  go.mod  go.sum
src/proto/: caw.proto  faz.proto  keyvaluestore.proto  storage.proto
src/proto/caw/: caw.pb.go
src/proto/faz/: faz.pb.go  faz_grpc.pb.go
test/: CMakeLists.txt  keyvaluestore_tset.cc  main.cc
